take snapshots when spacebar is hit

--- a/config.yaml
+++ b/config.yaml
@@ -4,6 +4,6 @@ camera:
   fps: 30       
   width: 1280
   height: 720
-data:
-  output_path: /home/arohatgi/recordings/
+recording:
+  path: recordings
 
